--- a/aplication-project/daniel-app/src/app/daniel/daniel.component.html
+++ b/aplication-project/daniel-app/src/app/daniel/daniel.component.html
@@ -6,6 +6,12 @@
 
 <div><span>Last Name: </span>{{employee.lname}}</div>
 
+<div><span>Email: </span>{{employee.email}}</div>
+
+<div><span>salary: </span>{{employee.salary}}</div>
+
+<div><span>bithriday: </span>{{employee.dateofbirth}}</div>
+
 <h2>{{employee1.fname | uppercase }} Details</h2>
 
 <div><span>id: </span>{{employee1.id}}</div>
@@ -13,3 +19,40 @@
 <div><span>First Name: </span>{{employee1.fname}}</div>
 
 <div><span>Last Name: </span>{{employee1.lname}}</div>
+
+
+<div><span>Email: </span>{{employee1.email}}</div>
+
+<div><span>salary: </span>{{employee1.salary}}</div>
+
+<div><span>bithriday: </span>{{employee.dateofbirth}}</div>
+
+<h2>{{employee1.fname | uppercase }} Details</h2>
+
+<div><span>id: </span>{{employee1.id}}</div>
+
+<div><span>First Name: </span>{{employee1.fname}}</div>
+
+<div><span>Last Name: </span>{{employee1.lname}}</div>
+
+
+<div><span>Email: </span>{{employee1.email}}</div>
+
+<div><span>salary: </span>{{employee1.salary}}</div>
+
+<div><span>bithriday: </span>{{employee.dateofbirth}}</div>
+
+<h2>{{employee1.fname | uppercase }} Details</h2>
+
+<div><span>id: </span>{{employee1.id}}</div>
+
+<div><span>First Name: </span>{{employee1.fname}}</div>
+
+<div><span>Last Name: </span>{{employee1.lname}}</div>
+
+
+<div><span>Email: </span>{{employee1.email}}</div>
+
+<div><span>salary: </span>{{employee1.salary}}</div>
+
+<div><span>bithriday: </span>{{employee.dateofbirth}}</div>
