--- a/aplication-project/daniel-app/src/app/app.component.html
+++ b/aplication-project/daniel-app/src/app/app.component.html
@@ -1,8 +1,4 @@
 <h1>{{title}}</h1>
 <p>Welcome to our company</p>
-<ol>
-    <li>{{first_name}}</li>
-    <li>{{family_name}}</li>
-    <li>{{date}}</li>
-</ol>
 <app-daniel></app-daniel>
+<app-fooer></app-fooer>
