--- a/aplication-project/daniel-app/src/app/daniel/daniel.component.css
+++ b/aplication-project/daniel-app/src/app/daniel/daniel.component.css
@@ -1,56 +1,83 @@
-h2 {
-    color: rgb(63, 153, 51);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
-}
-
-div{
-    font-weight: 700;
-    color: chocolate;
-}
-
 .employees {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-  }
-  .employees li {
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
-    border-radius: 4px;
-  }
-  .employees li:hover {
-    color: #2c3a41;
-    background-color: #e6e6e6;
-    left: .1em;
-  }
-
-  .employees li.selected:active {
-    background-color: black;
-    color: white;
-  }
-  .employees .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
-    line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
-    height: 1.8em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-  }
-  
-input {
-    padding: .5rem;
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 15em;
+  background-color: cadetblue
+}
+.employees li {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  background-color: #EEE;
+  margin: .5em;
+  padding: .3em 0;
+  height: 1.6em;
+  border-radius: 4px;
+}
+/* .employees li:hover {
+  color: #2c3a41;
+  background-color: #e6e6e6;
+  left: .1em;
+} */
+.employees li.selected {
+  background-color: black;
+  color: white;
+}
+/* .employees li.selected:hover {
+  background-color: #505050;
+  color: white;
+} */
+.employees li.selected:active {
+  background-color: black;
+  color: white;
+}
+.employees .badge {
+  font-size: small;
+  color: #000;
+  padding: 0.8em 0.7em 0 0.7em;
+  /* background-color:#405061; */
+  /* background-color: chocolate; */
+  line-height: 1em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 1.8em;
+  margin-right: .8em;
+  border-radius: 4px 0 0 4px;
+  text-align: center;
 }
 
+input {
+  padding: .5rem;
+}
+.d{
+  font-size: small;
+  color: #000;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color:#405061;
+  line-height: 1em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 1.8em;
+  margin-right: .8em;
+  border-radius: 4px 0 0 4px;
+  text-align: center;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #000;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: rgb(0, 59, 99);
+}
