--- a/aplication-project/daniel-app/src/app/fooer/fooer.component.css
+++ b/aplication-project/daniel-app/src/app/fooer/fooer.component.css
@@ -1,35 +1,31 @@
-a:link{
-    display: inline-block;
-    margin-top: 50px;
-    margin: 20px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-}
-
-a:visited{
-    color: #fff;
-    text-decoration: none;
-}
-
-a:hover{
-    color: rgb(64, 67, 77);
-    text-decoration: none;
-}
-
-a:active{
-    color: #fff;
-    text-decoration: none;
-}
-
-.container{
+footer {
     width: 100%;
-    height: 10%;
+    height: 24%;
+    position: absolute;
+    left: 0;
     text-align: center;
     background-color: #002e72;
     font-size: 25px;
-}
+    color: #91BEC2; 
+    padding: 15px 0;
+  }
 
+  img {
+    width: 38px;
+    height: 38px;
+    padding: 0.8em;
+    margin-bottom: 10px;
+    vertical-align: middle;
+  }
+
+  .footer div {
+      padding: 7px;
+      color: rgb(243, 243, 243);
+      font-size: 1.1em;
+  }
+
+  
 #p{
     color: #91BEC2; 
     padding: 15px 0;
-}
+} 
