--- a/aplication-project/daniel-app/src/app/daniel/daniel.component.css
+++ b/aplication-project/daniel-app/src/app/daniel/daniel.component.css
@@ -3,54 +3,38 @@
   list-style-type: none;
   padding: 0;
   width: 15em;
-  background-color: cadetblue
+  background-color: cadetblue;
+  color: #000;
 }
-.employees li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-/* .employees li:hover {
-  color: #2c3a41;
-  background-color: #e6e6e6;
-  left: .1em;
-} */
-.employees li.selected {
+
+.employees tr.selected {
   background-color: black;
   color: white;
 }
-/* .employees li.selected:hover {
-  background-color: #505050;
-  color: white;
-} */
-.employees li.selected:active {
+
+.employees tr.selected:active {
   background-color: black;
   color: white;
 }
 .employees .badge {
   font-size: small;
-  color: #000;
   padding: 0.8em 0.7em 0 0.7em;
-  /* background-color:#405061; */
-  /* background-color: chocolate; */
   line-height: 1em;
   position: relative;
+  cursor: pointer;
   left: -1px;
   top: -4px;
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
   text-align: center;
+
 }
 
 input {
   padding: .5rem;
 }
+
 .d{
   font-size: small;
   color: #000;
