--- a/aplication-project/daniel-app/src/styles.css
+++ b/aplication-project/daniel-app/src/styles.css
@@ -3,13 +3,20 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
 body {
   margin: 2em;
 }
+
 body, input[type="text"], button {
   color: #333;
   font-family: Cambria, Georgia, serif;
 }
+
 * {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.detail{
+  display: flex;
 }
