--- a/aplication-project/daniel-app/src/app/app.component.html
+++ b/aplication-project/daniel-app/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to our company</p>
 <app-daniel></app-daniel>
+<app-messages></app-messages>
 <app-fooer></app-fooer>
