--- a/aplication-project/daniel-app/src/app/app.component.html
+++ b/aplication-project/daniel-app/src/app/app.component.html
@@ -1,5 +1,11 @@
 <h1>{{title}}</h1>
 <p>Welcome to our company</p>
-<app-daniel></app-daniel>
+<nav>
+    <br>
+    <a routerLink="/employees">List of employees</a>
+    <br>
+    <a routerLink="/dashboard">deshbord</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
 <app-fooer></app-fooer>
