--- a/aplication-project/daniel-app/src/app/daniel/daniel.component.html
+++ b/aplication-project/daniel-app/src/app/daniel/daniel.component.html
@@ -23,3 +23,13 @@
     <app-employee-detail [employee]="selectedEmployee"></app-employee-detail>
 </div>
 <br>
+
+<!-- <tr *ngFor="let employee of employees" class="employees">
+    <td class="employees"><input type="checkbox"></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.id}}</a></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.fname}}</a></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.lname}}</a></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.dateofbirth}}</a></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.salary}}</a></td>
+    <td class="employees"><a routerLink="/detail/{{employee.id}}">{{employee.email}}</a></td>
+</tr> -->
