--- a/aplication-project/daniel-app/src/app/daniel/daniel.component.css
+++ b/aplication-project/daniel-app/src/app/daniel/daniel.component.css
@@ -30,6 +30,10 @@
   text-align: center;
 
 }
+.employees tr:hover{
+  background-color: rgb(7, 20, 134);
+  color: #fff;
+}
 
 input {
   padding: .5rem;
