--- a/aplication-project/daniel-app/src/app/messages/messages.component.html
+++ b/aplication-project/daniel-app/src/app/messages/messages.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="messageService.messages.length else elseBlock">
     <h2>Messages</h2>
-    <button class="clear" (click)="messageService.clear()">Clear messages</button>   
-    <div *ngFor='let message of messageService.messages'> {{message}}</div> 
+    <button class="clear" (click)="messageService.clear()">Clear messages</button>
+    <div *ngFor='let message of messageService.messages' id="div"> {{message}}</div>
 </div>    
     <ng-template #elseBlock>    
         <h2>Messages</h2>    
