--- a/aplication-project/daniel-app/src/app/dashboard/dashboard.component.html
+++ b/aplication-project/daniel-app/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,8 @@
 <h2>Top Employees</h2>
 <div class="employees-menu">
- <a *ngFor="let employee of employees">
-     {{employee.fname}} {{employee.lname}} 
- </a>
-</div>
-
-<!-- <h2>Top Employees</h2>
-<div class="employees-menu">
 <a *ngFor="let employee of employees"
-routerLink="/detail/{{employee.id}}">
-{{employee.fname}} {{employee.lname}}
+   routerLink="/detail/{{employee.id}}">
+   {{employee.fname}} {{employee.lname}}
 </a>
-</div> -->
+</div>
+<app-employee-search></app-employee-search>
