--- a/aplication-project/daniel-app/src/app/dashboard/dashboard.component.html
+++ b/aplication-project/daniel-app/src/app/dashboard/dashboard.component.html
@@ -4,5 +4,6 @@
    routerLink="/detail/{{employee.id}}">
    {{employee.fname}} {{employee.lname}}
 </a>
+<button type="button" (click)="getemployees()" class="button">↓</button>
 </div>
 <app-employee-search></app-employee-search>
