--- a/aplication-project/daniel-app/src/app/employee-search/employee-search.component.css
+++ b/aplication-project/daniel-app/src/app/employee-search/employee-search.component.css
@@ -3,44 +3,48 @@ label {
     font-weight: bold;
     font-size: 1.2rem;
     margin-top: 1rem;
-    margin-bottom: .5rem;    
+    margin-bottom: .5rem;
 }
-    
+
 input {
     padding: .5rem;
     width: 100%;
-    max-width: 600px;
-    box-sizing: border-box;
-    display: block;    
+    max-width: 300px;
+    box-sizing: border-box;    
 }
-    
+
+select {
+    padding: .5rem;
+    margin: .04rem;
+}
+
 input:focus {
-    outline: #336699 auto 1px;    
+    outline: #336699 auto 1px;
 }
-    
+
 li {
-    list-style-type: none;    
+    list-style-type: none;
 }
-    
+
 .search-result li a {
     border-bottom: 1px solid gray;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
     display: inline-block;
     width: 100%;
-    max-width: 600px;
+    max-width: 300px;
     padding: .5rem;
     box-sizing: border-box;
     text-decoration: none;
-    color: black;    
+    color: black;
 }
-    
+
 .search-result li a:hover {
     background-color: #435A60;
-    color: white;    
+    color: white;
 }
-    
-ul.search-result {    
+
+ul.search-result {
     margin-top: 0;
     padding-left: 0;
 }
