--- a/aplication-project/daniel-app/src/app/employees-routing/employees-routing.component.css
+++ b/aplication-project/daniel-app/src/app/employees-routing/employees-routing.component.css
@@ -5,6 +5,8 @@
   width: 15em;
   background-color: cadetblue;
   color: #000;
+
+  width: fit-content;
 }
 
 .employees tr.selected {
@@ -64,8 +66,14 @@ td, th {
   border: 1px solid #000;
   text-align: left;
   padding: 8px;
+  text-align: center;
 }
 
 tr:nth-child(even) {
   background-color: rgb(0, 59, 99);
+}
+
+img {
+  width: 20px;
+  height: auto;
 }
