--- a/Computer-Shop/src/app/event-details/event-details.component.css
+++ b/Computer-Shop/src/app/event-details/event-details.component.css
@@ -65,3 +65,21 @@ tr:nth-child(even){background-color: #dddddd;}
 .hidden {
     display: none;
   }
+
+  button {
+    color: #333;
+    background-color: #eee;
+    margin-bottom: 12px;
+    padding: 0.7rem;
+    border-radius: 4px;
+    font-size: 1rem;
+  }
+  button:hover {
+    color: #db0e0e;
+    background-color: #d8d2d2;
+  }
+  button:disabled {
+    background-color: #eee;
+    color: #ccc;
+    cursor: auto;
+  }
