--- a/Computer-Shop/src/styles.css
+++ b/Computer-Shop/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.loading {
+    display: flex;
+    justify-content: center;
+    align-content: center;    
+}
